<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/movieContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/movieDataContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp">


                <ImageView
                    android:id="@+id/posterIV"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/movie_avatar"
                    android:scaleType="fitXY"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <LinearLayout
                    android:id="@+id/movieData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/movieTitleTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Название фильма" />

                    <TextView
                        android:id="@+id/movieGenreTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Жанр фильма" />

                    <TextView
                        android:id="@+id/movieYearTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="год выхода" />

                    <TextView
                        android:id="@+id/movieRateTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Рейтинг" />

                    <TextView
                        android:id="@+id/movieIdTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Идентификатор" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/scoresTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scores"
                android:visibility="gone" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_score" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="@string/star1"
                    android:id="@+id/star1"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/ic_baseline_star_hollow" />

                <ImageView
                    android:contentDescription="@string/star2"
                    android:id="@+id/star2"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/ic_baseline_star_hollow" />

                <ImageView
                    android:contentDescription="@string/star3"
                    android:id="@+id/star3"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/ic_baseline_star_hollow" />

                <ImageView
                    android:contentDescription="@string/star4"
                    android:id="@+id/star4"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/ic_baseline_star_hollow" />

                <ImageView
                    android:contentDescription="@string/star5"
                    android:id="@+id/star5"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/ic_baseline_star_hollow" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
